# Virtual-Physics-Benchmark

./: README.md  pyproject.toml
examples/: basic_run.py  symbolic_and_export.py
laws_benchmark/: __init__.py  core.py  curriculum.py  dataset.py  envs.py  evaluation.py  generator.py  integrators.py  laws.py  simulation.py  symbolic_utils.py  utils.py
